z-index: the higher the value, the bigger it's priority when rendering the elements. for instance, z index 2 will appear above z-index 1. in this case, because the default z-index is 0, even though the fixed element is found later in the html, it still renders behind the absolute elements because its z-index is -1.

--- a/style.css
+++ b/style.css
@@ -54,4 +54,5 @@ body {
     position: fixed;
     top: 100px;
     left: 50px;
+    z-index: -1;
 }
